[package]
name = "MonteCarloGen"
version = "0.1.0"
authors = ["sumnernh@gmail.com <sumnernh@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "monte_carlo"
crate-type = ["cdylib"]

[dependencies]
rand = "^0.7.2"
rayon = "^1.2.1"
num = "^0.2.0"

[dependencies.pyo3]
version = "^0.8.3"
features = ["extension-module"]