[package]
name = "py_monte_carlo"
version = "0.1.0"
authors = ["sumnernh@gmail.com <sumnernh@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "py_monte_carlo"
crate-type = ["cdylib"]

[dependencies]
rand = "^0.7.2"
rand_chacha = "^0.2.0"
rayon = "^1.2.1"
num = "^0.2.0"
monte_carlo = { path = "monte_carlo" }

[dependencies.pyo3]
version = "^0.8.3"
features = ["extension-module"]